# curses

./: CMakeLists.txt
curses/: CMakeLists.txt
curses/include/: curses_private.h  keymap.h
curses/src/: acs.c  add_wch.c  add_wchstr.c  addbytes.c  addch.c  addchnstr.c  addnstr.c  addwstr.c  attributes.c  background.c  bell.c  border.c  box.c  cchar.c  chgat.c  clrtobot.c  clrtoeol.c  color.c  copywin.c  cr_put.c  ctrace.c  cur_hash.c  curs_set.c  curses.c  delch.c  deleteln.c  delwin.c  echo_wchar.c  erase.c  fileio.c  flushok.c  fullname.c  get_wch.c  get_wstr.c  getch.c  getstr.c  getyx.c  idcok.c  idlok.c  in_wch.c  (+43 more)
general/: arc4random.c  cdbr.c  cdbw.c  getentropy_linux.c  getprogname.c  mi_vector_hash.c  sha512c.c
general/include/: cdbr.h  chacha_private.h  endian_conv.h
general/include/hash/: sha512.h
include/: curses.h  term.h  unctrl.h
nbperf/: CMakeLists.txt
nbperf/src/: graph2.c  graph3.c  nbperf-bdz.c  nbperf-chm.c  nbperf.c
terminfo/: CMakeLists.txt  genhash  genterms  genthash
terminfo/chicken/: CMakeLists.txt
terminfo/egg/: CMakeLists.txt  compiled_terms.c
terminfo/src/: compile.c  curterm.c  setupterm.c  term.c  termcap.c  termcap_map.c  tparm.c  tputs.c
tic/: CMakeLists.txt  tic.c
tic/chicken/: CMakeLists.txt
tic/egg/: CMakeLists.txt
